--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -16,7 +16,7 @@ import { Button } from '../src/components/Buttons.js';
 Salesforce Marketing Cloud is a complex and flexible tool. This combination is a dream-come-true set for enterprise Marketing Automation tools, but on the other hand, it enables mistakes and messy solutions. Find the right path to success through a best-practice fuelled checklist full of tool-based explanations and examples.
 
 <Button
-    link='./zen-of-sfmc'
+    link='./zen-of-sfmc/'
     text='Read about Zen of SFMC'
 />
 
